--- a/views/update_employee.ejs
+++ b/views/update_employee.ejs
@@ -27,6 +27,8 @@
     .form-container h4 {
       margin-top: 0;
       margin-bottom: 20px;
+      font-size: 24px;
+      color: #333;
     }
 
     .form-group {
@@ -37,12 +39,13 @@
       display: block;
       margin-bottom: 5px;
       font-weight: bold;
+      color: #333;
     }
 
     .form-control {
       width: 100%;
       padding: 10px;
-      font-size: 14px;
+      font-size: 16px;
       border: 1px solid #ced4da;
       border-radius: 4px;
     }
@@ -51,7 +54,7 @@
       display: block;
       width: 100%;
       padding: 10px;
-      font-size: 14px;
+      font-size: 16px;
       text-align: center;
       background-color: #007bff;
       border: none;
