--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -3,26 +3,34 @@
 
 <head>
   <%- include('_bootstrap_meta')%>
-  <title style=" font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">Sign In</title>
+  <title style="font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">Sign In</title>
   <style>
     body {
-      /* font-family: Arial, sans-serif; */
+      font-family: Arial, sans-serif;
       background-color: #16191c;
+      margin: 0;
+      padding: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
     }
 
     .container {
+      width: 100%;
       max-width: 400px;
-      margin: 100px auto;
       padding: 20px;
       border: 2px solid #ced4da;
       border-radius: 5px;
       background-color: #e0dddd;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
     }
 
     .container h4 {
       text-align: center;
-      margin-top: 0;
+      margin: 0;
       margin-bottom: 20px;
+      color: #333;
     }
 
     .form-group {
@@ -31,23 +39,27 @@
 
     .form-label {
       font-weight: bold;
+      display: block;
+      margin-bottom: 6px;
+      color: #333;
     }
 
     .form-control {
       width: 100%;
       padding: 10px;
-      font-size: 14px;
+      font-size: 16px;
       border: 1px solid #e7e9eb;
       border-radius: 4px;
+      background-color: #fff;
     }
 
     .btn-primary {
       display: block;
       width: 100%;
       padding: 10px;
-      font-size: 14px;
+      font-size: 16px;
       text-align: center;
-      background-color: #0004ff;
+      background-color: #007bff;
       border: none;
       border-radius: 4px;
       color: #fff;
@@ -55,18 +67,27 @@
     }
 
     .btn-primary:hover {
-      background-color: #4500b3;
+      background-color: #0056b3;
     }
 
     .signup-link {
       text-align: center;
       margin-top: 10px;
     }
+
+    .signup-link a {
+      color: #007bff;
+      text-decoration: none;
+    }
+
+    .signup-link a:hover {
+      text-decoration: underline;
+    }
   </style>
 </head>
 
 <body>
-  <%- include('_header')%>
+  <!-- <%- include('_header')%> -->
   <div class="container">
     <h4>Employee Sign In</h4>
     <form action="/employee/create-session" method="POST">
